--- a/package.json
+++ b/package.json
@@ -6,7 +6,19 @@
     "renderer": "react",
     "apiVersion": "v1",
     "generator": ">=1.10.0 <2.0.0",
-    "supportedProtocols": ["mqtt"]
+    "supportedProtocols": ["mqtt"],
+    "parameters": {
+      "server": {
+        "description": "The server you want to use in the code.",
+        "required": true
+      }
+    }
+  },
+  "scripts": {
+    "test:clean": "rimraf test/project/client.py",
+    "test:generate": "asyncapi generate fromTemplate test/fixtures/asyncapi.yml ./ --output test/project --force-write --param server=dev",
+    "test:start": "python test/project/test.py",
+    "test": "npm run test:clean && npm run test:generate && npm run test:start"
   },
   "dependencies": {
     "@asyncapi/generator-react-sdk": "^0.2.25"
